--- a/UI/MainWindow.xaml
+++ b/UI/MainWindow.xaml
@@ -14,7 +14,11 @@
     <Window.Resources>
         <DataTemplate x:Key="CommitTemplate" DataType="{x:Type logic:Vertex}">
             <Border x:Name="Border" BorderBrush="DarkSlateGray" Background="#daf5dd" BorderThickness="3" CornerRadius="10,10,10,10" Padding="10">
-                <TextBlock Text="{Binding Path=Commit.ShortHash, Mode=OneWay}" Foreground="Black" FontSize="14pt" FontFamily="Consolas" />
+                <StackPanel>
+                    <TextBox IsReadOnly="True" Text="{Binding Path=Commit.ShortHash, Mode=OneWay}" Foreground="Black" FontSize="14pt" FontFamily="Consolas" />
+                    <TextBlock Text="{Binding Path=Commit.Subject, Mode=OneWay}" Foreground="Black" FontSize="10pt" FontFamily="Consolas" />
+                    <TextBlock Text="{Binding Path=Commit.AuthorName, Mode=OneWay, StringFormat={}- {0}}" Foreground="DarkGray" FontSize="8pt" FontFamily="Consolas" FontStyle="Italic" />
+                </StackPanel>
             </Border>
             <DataTemplate.Triggers>
                 <DataTrigger Binding="{Binding Path=Orphan}" Value="true">
